# FunShot

./: .gitignore  .gitmodules  CMakeLists.txt  FunShotLinux.sh  FunShotWin.bat  README.md  compile_commands.json  run.sh
.cache/clangd/index/: Core.h.8F1673873A8EF1BE.idx  Data.h.6FD2F0858003EF1B.idx  ECS.h.53FB2EDCA7EE636A.idx  Game.cpp.52DC3251A7884A65.idx  Game.h.63D6647C55D34C66.idx  Mesh.cpp.942108665B9DC24F.idx  Mesh.h.0FB4A4DB64B98207.idx  Renderer.cpp.EFFD07EF9E2B1C05.idx  Renderer.h.7901CD705E12B1D3.idx  ResourceManager.cpp.ACB96C33E93A0D95.idx  ResourceManager.h.B5FD2C3B089EE4C0.idx  Shader.cpp.D726699E3BE2382F.idx  Shader.h.95C6EA477CABF518.idx  Texture.cpp.B4CC07475CB214EA.idx  Texture.h.04FD57072ED50077.idx  Vertex.cpp.1B9AACEDE418BC0C.idx  (+384 more)
FunShot/: CMakeLists.txt
FunShot/src/: FunShot.h  fspch.h
FunShot/src/Engine/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
FunShot/src/Engine/Core/: Application.cpp  Application.h  Assert.h  Base.h  Core.h  EntryPoint.h  Input.h  KeyCode.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
FunShot/src/Engine/Debug/: Instrumentor.h
FunShot/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
FunShot/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
FunShot/src/Engine/Math/: Math.cpp  Math.h
FunShot/src/Engine/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
FunShot/src/Engine/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
FunShot/src/Engine/Utils/: PlatformUtils.h
FunShot/src/Platform/Linux/: LinuxPlatformUtils.cpp  LinuxWindow.cpp  LinuxWindow.h
FunShot/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
FunShot/src/Platform/Windows/: WindowPlatformUtils.cpp  WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
FunShotEditor/: CMakeLists.txt
FunShotEditor/include/Controls/: Camera.h  EnttInfo.h  IControl.h  ModelAssetControl.h  Transform.h
FunShotEditor/include/Editor/: EditorLayer.h  Events.h  Inputs.h  Widget.h
FunShotEditor/include/Windows/: Hierarchy.h  Inspector.h  MenuBar.h  MenuList.h  Resource.h  Viewport.h  Viewport2D.h  ViewportPlay.h
FunShotEditor/src/: Editor.cpp  EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  FunShotEditorApp.cpp  ImGuiBuild.cpp
FunShotEditor/src/Context/: Context.h  Events.h  Helpers.h  Inputs.h  Widget.h
FunShotEditor/src/Controls/: Camera.h  DirectLight.h  EnttInfo.h  IControl.h  Model.h  RigidBody.h  Script.h  Skybox.h  Transform.h
FunShotEditor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
FunShotEditor/src/Windows/: Hierarchy.h  Inspector.h  MenuBar.h  MenuList.h  Resource.h  Viewport.h
FunShotEngine/: CMakeLists.txt
FunShotEngine/include/: FunShot.h  fspch.h
FunShotEngine/include/Auxiliaries/: Assets.h  ECS.h
FunShotEngine/include/Core/: Application.h  Assert.h  EntryPoint.h  Event.h  FSCore.h  FSLog.h  Layer.h  LayerStack.h  Window.h
FunShotEngine/include/ImGui/: ImGuiLayer.h
FunShotEngine/include/Renderer/: Framebuffer.h  Renderer.h
FunShotEngine/includes/Application/: Application.h  Context.h  Interface.h
FunShotEngine/includes/Auxiliaries/: Assets.h  ECS.h  Serializer.h
FunShotEngine/includes/Common/: Core.h  Event.h  YAML.h
FunShotEngine/includes/Graphics/: Renderer.h
FunShotEngine/includes/Graphics/Buffers/: Frame.h  Mesh.h  Vertex.h
FunShotEngine/includes/Graphics/Models/: Animation.h  Animator.h  Helper.h  Model.h
FunShotEngine/includes/Graphics/Shaders/: BRDF.h  Bloom.h  Final.h  Irradiance.h  PBR.h  Prefiltered.h  Shader.h  Shadow.h  SkyMap.h  Skybox.h
FunShotEngine/includes/Graphics/Textures/: Texture.h
FunShotEngine/includes/Graphics/Utilities/: Data.h  Quad.h  Skybox.h
FunShotEngine/includes/Physics/: Callback.h  Context.h  Helpers.h  Utilities.h
FunShotEngine/includes/Scripts/: Context.h  Helpers.h  Utilities.h
FunShotEngine/includes/Window/: Events.h  Inputs.h  Window.h
FunShotEngine/src/: Application.cpp  Framebuffer.cpp  Genesis.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Renderer.cpp  Window.cpp
FunShotGame/: CMakeLists.txt
FunShotGame/include/: Card.h  GameLayer.h  Hand.h
FunShotGame/src/: Card.cpp  Game.cpp  GameLayer.cpp
FunShotScript/FunShotEngine/: Core.lua  Input.lua
Resources/Assets/: Cube.gpmesh  Plane.gpmesh  Sphere.gpmesh
Resources/ImGui/: default.ini
Resources/Scenes/: CubeExample.FunShot  Example.FunShot  uuidtest.FunShot
Resources/Shaders/: Basic.glsl  Basic2.glsl  Sprite.vert  Texture.glsl  basic.vert
SandBox/: CMakeLists.txt
SandBox/src/: App.cpp  ParticleSystem.cpp  ParticleSystem.h  Sandbox2D.cpp  Sandbox2D.h  Test.cpp  Test.h
include/: Core.h  Data.h  ECS.h  Game.h  ResourceManager.h  Texture.h  Window.h
include/Graphics/: Mesh.h  Renderer.h  Shader.h  Vertex.h
src/: Game.cpp  Mesh.cpp  Renderer.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  Vertex.cpp  main.cpp
